--- a/load_following_decision_package/inputs.yaml
+++ b/load_following_decision_package/inputs.yaml
@@ -43,3 +43,7 @@ ab_turn_down_ratio: 3
 
 # Net Metering
 net_metering: True
+
+# Economics
+electric_utility_cost: 0.1331   # $/kWh
+fuel_cost: 20.00  # $/thousand cubic feet
