--- a/load_following_decision_package/inputs.yaml
+++ b/load_following_decision_package/inputs.yaml
@@ -21,7 +21,7 @@ ab_turn_down: 3
 net_metering: True
 
 # Energy Demand
-demand_filename: input_load_profiles_hourly
+demand_filename: input_load_profiles_hourly.csv
 
 # Economics
 electric_utility_cost: 0.1331   # $/kWh
