--- a/load_following_decision_package/inputs.yaml
+++ b/load_following_decision_package/inputs.yaml
@@ -19,8 +19,8 @@ thermal_output_to_fuel_input: 0.35
 100: 0.457
 
 # Aux Boiler Information
-ab_capacity: 1
-ab_eff: 2
+ab_capacity: 2  # MMBtu/hr
+ab_eff: 0.80
 ab_turn_down: 3
 
 # Energy Demand
@@ -28,4 +28,4 @@ demand_filename: default_file.csv
 
 # Economics
 electric_utility_cost: 0.1331   # $/kWh
-fuel_cost: 20.00  # $/thousand cubic feet
+fuel_cost: 3.60  # $/MMBtu
