--- a/load_following_decision_package/input_files/inputs.yaml
+++ b/load_following_decision_package/input_files/inputs.yaml
@@ -3,7 +3,7 @@
 #        Reciprocating Internal Combustion Engines". Data is specific to the
 #        Wartsila 20V34SG Generator's terminal efficiency (LHV).
 
-chp_cap: 50
+chp_cap: 50   # kW
 chp_heat_power: 4
 chp_turn_down: 3.3
 thermal_output_to_fuel_input: 0.35
@@ -19,12 +19,12 @@ thermal_output_to_fuel_input: 0.35
 100: 0.457
 
 # Aux Boiler Information
-ab_capacity: 2  # MMBtu/hr
+ab_capacity: 2000000  # Btu/hr
 ab_eff: 0.80
 ab_turn_down: 3
 
 # TES Storage Information
-tes_cap: 100  # MMBtu
+tes_cap: 1000000  # Btu
 
 # Energy Demand
 demand_filename: default_file.csv
