--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ classifiers =
 zip_safe = False
 include_package_data = True
 package_dir =
-    = load_following_decision_package
+    = lfd_package
 packages = find:
 install_requires =
     pandas>=1.3.5
@@ -32,4 +32,4 @@ install_requires =
 python_requires = >=3.7
 
 [options.packages.find]
-where = load_following_decision_package
+where = lfd_package
