Changed name of package to match documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = load_following_decision_chriscurl1538
+name = load_following_decision
 version = 0.1.0
 author = Christopher Curl
 author_email = curlc@oregonstate.edu
