Added discharge rate and initial value to TES in .yaml file

--- a/lfd_package/input_files/debug_file.yaml
+++ b/lfd_package/input_files/debug_file.yaml
@@ -24,12 +24,14 @@ chp_turn_down: 3.3
 100: 0.457
 
 # Aux Boiler Information
-ab_capacity: 800000.0  # Btu/hr
+ab_capacity: 8000000.0  # Btu/hr
 ab_eff: 0.80
 ab_turn_down: 10.0
 
 # TES Storage Information
 tes_cap: 1000000.0  # Btu
+tes_discharge_rate: 500000.0  # Btu/hr TODO: Implement into model
+tes_init: 500.0   # Btu, initial storage TODO: Implement into model
 
 # Energy Costs
 electric_utility_cost: 0.1331   # $/kWh
