changed .csv debug filename from simple_load_profile.csv to simple_load_profile_short.csv

--- a/lfd_package/input_files/debug_file.yaml
+++ b/lfd_package/input_files/debug_file.yaml
@@ -42,4 +42,4 @@ chp_installed_cost: 2900.0 # $/kW
 tes_installed_cost: 0.35 # $/kWh
 
 # Energy Demand File Name
-demand_filename: simple_load_profile.csv
+demand_filename: simple_load_profile_short.csv
