--- a/lfd_package/input_files/default_file.yaml
+++ b/lfd_package/input_files/default_file.yaml
@@ -1,8 +1,3 @@
-# Part-load efficiency data is sourced from the US EPA CHP Partnership's
-#        "Catalog of CHP Technologies, Section 2: Technology Characterization -
-#        Reciprocating Internal Combustion Engines". Data is specific to the
-#        Wartsila 20V34SG Generator's terminal efficiency (LHV).
-
 # CHP installed cost sourced from the following link:
 #    https://understandingchp.com/chp-applications-guide/6-8-rules-of-thumb-for-chp-engineering-and-installation-costs/
 
@@ -13,12 +8,13 @@
 
 # CHP System Specs (https://chp.ecatalog.ornl.gov/package/39-PR12-ZC97330)
 chp_cap: 35   # kW
-fuel_type: Natural Gas # HHV of NG is 1089 Btu/ft3
-fuel_input_rate: 0.40 # MMBtu/hr
+fuel_type: "Natural Gas" # HHV of NG is 1089 Btu/ft3
+fuel_input_rate: 400000 # Btu/hr
 chp_electric_eff: 0.299
 chp_thermal_eff: 0.50
 chp_turn_down: 3.3
 chp_heat_power: 1.71
+percent_availability: 0.90
 
 # CHP Electrical Part Loads and Efficiencies (HHV)
 Electrical:
@@ -39,9 +35,11 @@ ab_turn_down: 10.0
 
 # TES Storage Information
 tes_cap: 1000000.0  # Btu
+tes_discharge_rate: 500000.0  # Btu/hr TODO: Implement into model
+tes_init: 500.0   # Btu, initial storage TODO: Implement into model
 
 # Energy Costs
-net_metering_status: False   # must be "True" or "False" (no quotes)
+net_metering_status: "False"   # must be "True" or "False" (no quotes)
 grid_efficiency: 0.5   # between 0-1
 electric_utility_cost: 0.1331   # $/kWh
 fuel_cost: 3.60  # $/MMBtu
@@ -51,4 +49,4 @@ chp_installed_cost: 2900.0 # $/kW
 tes_installed_cost: 0.35 # $/kWh
 
 # Energy Demand File Name
-demand_filename: default_file.csv
+demand_filename: 'default_file.csv'
