--- a/lfd_package/input_files/default_file.yaml
+++ b/lfd_package/input_files/default_file.yaml
@@ -39,7 +39,7 @@ tes_discharge_rate: 500000.0  # Btu/hr TODO: Implement into model
 tes_init: 500.0   # Btu, initial storage TODO: Implement into model
 
 # Energy Costs
-net_metering_status: "False"   # must be "True" or "False" (no quotes)
+net_metering_status: "False"   # must be "True" or "False"
 grid_efficiency: 0.5   # between 0-1
 electric_utility_cost: 0.1331   # $/kWh
 fuel_cost: 3.60  # $/MMBtu
@@ -49,4 +49,4 @@ chp_installed_cost: 2900.0 # $/kW
 tes_installed_cost: 0.35 # $/kWh
 
 # Energy Demand File Name
-demand_filename: 'default_file.csv'
+demand_filename: 'simple_load_profile_short.csv'
