--- a/lfd_package/input_files/default_file.yaml
+++ b/lfd_package/input_files/default_file.yaml
@@ -35,12 +35,12 @@ ab_turn_down: 10.0
 tes_discharge_rate: 500000.0  # Btu/hr TODO: Implement into model
 tes_init: 250000.0   # Btu, initial storage
 
-# NG and Grid carbon emissions data
+# NG and Grid carbon emissions data TODO: Use for emissions increase only
 ng_co2e: 14.43 #kg/mmbtu (source: https://www.epa.gov/energy/greenhouse-gases-equivalencies-calculator-calculations-and-references)
-nwpp_co2e: 603.8 #lbs/mwh
-frcc_co2e: 838.2 #lbs/mwh
-mrow_co2e: 986.6 #lbs/mwh
-aznm_co2e: 850.2 #lbs/mwh
+nwpp_co2e: 603.8 #lbs/mwh TODO: Implement
+frcc_co2e: 838.2 #lbs/mwh TODO: Implement
+mrow_co2e: 986.6 #lbs/mwh TODO: Implement
+aznm_co2e: 850.2 #lbs/mwh TODO: Implement
 
 # Energy Costs
 net_metering_status: "False"   # must be "True" or "False"
