--- a/lfd_package/input_files/default_file.yaml
+++ b/lfd_package/input_files/default_file.yaml
@@ -12,7 +12,7 @@ chp_electric_eff: 0.299
 chp_thermal_eff: 0.50
 chp_turn_down: 3.3
 chp_heat_power: 1.71
-percent_availability: 0.90  # TODO: Implement for annual sums
+percent_availability: 0.90  # TODO: This may actually need to be calculated rather than given
 
 # CHP Electrical Part Loads and Efficiencies (HHV)
 Electrical:
@@ -27,13 +27,13 @@ Thermal:
   100: 0.500
 
 # Aux Boiler Specs
-ab_capacity: 800000.0  # Btu/hr
+ab_capacity: 1500000.0  # Btu/hr
 ab_eff: 0.80
 ab_turn_down: 10.0
 
 # TES Storage Specs
 tes_discharge_rate: 500000.0  # Btu/hr TODO: Implement into model
-tes_init: 250000.0   # Btu, initial storage
+tes_init: 0   # Btu, initial storage
 
 # Energy Costs
 grid_efficiency: 0.4   # between 0-1, national average
@@ -45,9 +45,9 @@ chp_installed_cost: 2900.0 # $/kW TODO: Use more reliable source for numbers
 tes_installed_cost: 0.35 # $/kWh
 
 # Energy Demand File Name
-demand_filename: 'pre1980_arizona_pheonix.csv'
-city: 'miami'
-state: 'fl' # Must be two-letter abbreviation
+demand_filename: 'new2004_arizona_pheonix.csv'
+city: 'pheonix'
+state: 'az' # Must be two-letter abbreviation
 
 
 #Sources:
