--- a/lfd_package/input_files/default_file.yaml
+++ b/lfd_package/input_files/default_file.yaml
@@ -45,9 +45,9 @@ chp_installed_cost: 2900.0 # $/kW TODO: Use more reliable source for numbers
 tes_installed_cost: 0.35 # $/kWh
 
 # Energy Demand File Name
-demand_filename: 'new2004_arizona_pheonix.csv'
-city: 'pheonix'
-state: 'az' # Must be two-letter abbreviation
+demand_filename: 'new2004_washington_seattle.csv'
+city: 'seattle'
+state: 'wa' # Must be two-letter abbreviation
 
 
 #Sources:
