--- a/lfd_package/input_files/fairbanks_ak.yaml
+++ b/lfd_package/input_files/fairbanks_ak.yaml
@@ -5,69 +5,93 @@
 
 ### Location-specific inputs for Fairbanks, AK
 
-demand_filename: 'STD2019_Fairbanks_AK.csv'
+demand_filename: 'STD2019_Fairbanks_AK.csv'   # TODO: Change if needed
 city: 'fairbanks'
 state: 'ak' # Must be two-letter abbreviation
+no_apts: 31
 
-# Energy Costs - Electric, Master Meter
-meter_type_el: 'string'
-meter_type_fuel: 'string'
-schedule_type_el: ['string']        # List of applicable key names
-schedule_type_fuel: 'string'        # Options: Block, Seasonal, Demand, Basic
+# Energy Costs - Schedule and Metering Types
+meter_type_el: "single_metered_el"
+meter_type_fuel: "single_metered_fuel"
+schedule_type_el: ["schedule_basic"]  # List of applicable key names
+schedule_type_fuel: ["schedule_basic"]  # List of applicable key names
 
-summer_start_inclusive: 00
-winter_start_inclusive: 00
+summer_start_inclusive: 0
+winter_start_inclusive: 0
 
-master_metered_el:  # Schedule XXX via XXX utility
+# Electricity Rates
+master_metered_el:
   schedule_basic:
-    monthly_base_charge: 0      # $/month
-    monthly_energy_charge: 0    # $/kWh
-    energy_units: 'kWh'
+    monthly_base_charge: 26      # $/month
+    monthly_energy_charge: 0.25836    # $/kWh
+    units: 'kWh'
   schedule_seasonal_energy:
     monthly_base_charge: 0      # $/month
     energy_charge_summer: 0     # $/kWh
     energy_charge_winter: 0     # $/kWh
-    energy_units: 'kWh'
+    units: 'kWh'
+  schedule_seasonal_demand:
+    monthly_base_charge: 0      # $/month
+    dem_charge_summer: 0     # $/kW
+    dem_charge_winter: 0     # $/kW
+    units: 'kW'
   schedule_seasonal_energy_block:
     monthly_base_charge: 0               # $/month
-    energy_charge_summer_block1: 0       # $/kWh
-    energy_charge_summer_block2: 0       # $/kWh
-    energy_charge_winter_block1: 0       # $/kWh
-    energy_charge_winter_block2: 0       # $/kWh
-    energy_block1_cap: 0                 # kWh
-    energy_units: 'kWh'
+    energy_charge_summer_block1: 0    # $/kWh
+    energy_charge_summer_block2: 0    # $/kWh
+    energy_charge_winter_block1: 0    # $/kWh
+    energy_charge_winter_block2: 0    # $/kWh
+    energy_block1_cap: 0    # kWh
+    units: 'kWh'
   schedule_seasonal_demand_block:
     monthly_base_charge: 0            # $/month
     dem_charge_summer_block1: 0       # $/kW
-    dem_charge_summer_block2: 0       # $/kW
+    dem_charge_summer_block2: 0    # $/kW
     dem_charge_winter_block1: 0       # $/kW
-    dem_charge_winter_block2: 0       # $/kW
-    dem_block1_cap: 0           # kW
-    dem_units: 'kW'
+    dem_charge_winter_block2: 0   # $/kW
+    dem_block1_cap: 0          # kW
+    units: 'kW'
 
-single_metered_el:  # Schedule XXX via XXX utility
+single_metered_el:
   schedule_basic:
-    monthly_base_charge: 0      # $/month
-    monthly_energy_charge: 0    # $/kWh
-    energy_units: 'kWh'
+    monthly_base_charge: 22.50      # $/month
+    monthly_energy_charge: 0.25079    # $/kWh
+    units: 'kWh'
   schedule_energy_block:
-    monthly_base_charge: 0            # $/month
-    energy_charge_block1: 0           # $/kWh
-    energy_charge_block2: 0           # $/kWh
-    energy_block1_cap: 0              # kWh
-    energy_units: 'kWh'
+    monthly_base_charge: 0         # $/month
+    energy_charge_block1: 0    # $/kWh
+    energy_charge_block2: 0    # $/kWh
+    energy_block1_cap: 0    # kWh
+    units: 'kWh'
 
-master_metered_fuel:    # Schedule XXX via XXX utility
+# Natural Gas Rates
+master_metered_fuel:
   schedule_basic:
-    monthly_base_charge: 0            # $/month
-    monthly_energy_charge: 0          # $/therm
-    energy_units: 'therm'
+    monthly_base_charge: 12        # $/month
+    monthly_energy_charge: 2.00869    # $/therm
+    units: 'therm'
+  schedule_energy_block:
+    monthly_base_charge: 0         # $/month
+    energy_charge_block1: 0        # $/therm
+    energy_charge_block2: 0        # $/therm
+    energy_charge_block3: 0        # $/therm
+    energy_block1_cap: 0           # therm
+    energy_block2_cap: 0             # therm
+    units: 'therm'
 
-single_metered_fuel:    # Schedule XXX via XXX utility
+single_metered_fuel:
   schedule_basic:
-    monthly_base_charge: 0            # $/month
-    monthly_energy_charge: 0          # $/therm
-    energy_units: 'therm'
+    monthly_base_charge: 12         # $/month
+    monthly_energy_charge: 2.00869    # $/therm
+    units: 'therm'
+  schedule_energy_block:
+    monthly_base_charge: 0         # $/month
+    energy_charge_block1: 0        # $/therm
+    energy_charge_block2: 0        # $/therm
+    energy_charge_block3: 0        # $/therm
+    energy_block1_cap: 0           # therm
+    energy_block2_cap: 0             # therm
+    units: 'therm'
 
 ### Equipment Specifications, Efficiencies
 
@@ -76,27 +100,15 @@ chp_turn_down: 3.3
 
 # Efficiencies
 ab_eff: 0.80
-energy_plus_eff: 0.80   # TODO: Implement
-grid_efficiency: 0.4    # between 0-1, national average
+energy_plus_eff: 0.80   # Assumed boiler efficiency in Energy Plus
+grid_efficiency: 0.4   # between 0-1, national average
 
 # TES Storage Initialization
 tes_init: 0.5   # initial SOC
+tes_vol_rate: 500  # liters/hr
+tes_energy_density: 80  # kWh/m^3
 
-# Incremental Equipment Costs (material and installation)
-chp_installed_cost: 2900.0 # $/kW TODO: Use more reliable source for numbers
-tes_installed_cost: 0.35 # $/kWh
-
-
-### Sources:
-#
-#  CHP specs:
-#  https://chp.ecatalog.ornl.gov/package/39-PR12-ZC97330
-#
-#  CHP installed cost:
-#  https://understandingchp.com/chp-applications-guide/6-8-rules-of-thumb-for-chp-engineering-and-installation-costs/
-#
-#  TES installed cost:
-#  https://betterbuildingssolutioncenter.energy.gov/sites/default/files/slides/Thermal%20Energy%20Storage%2C%20The%20Lowest%20Cost%20Storage.pdf
-#
-# Grid Efficiency:
-# https://www.eia.gov/todayinenergy/detail.php?id=44436
+# Incremental Equipment Costs (installed cost = labor, material, and installation)
+chp_installed_cost: 3453.34   # $/kW
+chp_om_cost: 0.03             # $/kWh
+tes_installed_cost: 20.96     # $/kWh
