--- a/lfd_package/input_files/seattle_wa.yaml
+++ b/lfd_package/input_files/seattle_wa.yaml
@@ -5,30 +5,36 @@
 
 ### Location-specific inputs for Seattle, WA
 
-demand_filename: 'STD2019_Seattle_WA.csv'
+demand_filename: 'STD2019_Seattle_WA.csv'     # TODO: Change if needed
 city: 'seattle'
 state: 'wa' # Must be two-letter abbreviation
 no_apts: 31
 
-# Energy Costs - Electric, Master Meter
-meter_type_el: "master_metered_el"
-meter_type_fuel: "master_metered_fuel"
-schedule_type_el: ["schedule_seasonal_energy_block", "schedule_seasonal_demand_block"]  # List of applicable key names
-schedule_type_fuel: ["schedule_basic"]  # Options: Block, Seasonal, Demand, Basic
+# Energy Costs - Schedule and Metering Types
+meter_type_el: "single_metered_el"
+meter_type_fuel: "single_metered_fuel"
+schedule_type_el: ["schedule_energy_block"]  # List of applicable key names
+schedule_type_fuel: ["schedule_basic"]  # List of applicable key names
 
 summer_start_inclusive: 04
 winter_start_inclusive: 10
 
-master_metered_el:  # Schedule 7A via Puget Sound Energy utility
+# Electricity Rates
+master_metered_el:
   schedule_basic:
     monthly_base_charge: 0      # $/month
     monthly_energy_charge: 0    # $/kWh
-    energy_units: 'kWh'
+    units: 'kWh'
   schedule_seasonal_energy:
     monthly_base_charge: 0      # $/month
     energy_charge_summer: 0     # $/kWh
     energy_charge_winter: 0     # $/kWh
     units: 'kWh'
+  schedule_seasonal_demand:
+    monthly_base_charge: 0      # $/month
+    dem_charge_summer: 0     # $/kW
+    dem_charge_winter: 0     # $/kW
+    units: 'kW'
   schedule_seasonal_energy_block:
     monthly_base_charge: 53.95               # $/month
     energy_charge_summer_block1: 0.081649    # $/kWh
@@ -46,7 +52,7 @@ master_metered_el:  # Schedule 7A via Puget Sound Energy utility
     dem_block1_cap: 50          # kW
     units: 'kW'
 
-single_metered_el:  # Schedule 7 via Puget Sound Energy utility
+single_metered_el:
   schedule_basic:
     monthly_base_charge: 0      # $/month
     monthly_energy_charge: 0    # $/kWh
@@ -58,16 +64,33 @@ single_metered_el:  # Schedule 7 via Puget Sound Energy utility
     energy_block1_cap: 600    # kWh
     units: 'kWh'
 
-master_metered_fuel:    # Schedule 31 via Puget Sound Energy utility
+# Natural Gas Rates
+master_metered_fuel:
   schedule_basic:
     monthly_base_charge: 38.89        # $/month
     monthly_energy_charge: 1.13068    # $/therm
     units: 'therm'
+  schedule_energy_block:
+    monthly_base_charge: 0         # $/month
+    energy_charge_block1: 0        # $/therm
+    energy_charge_block2: 0        # $/therm
+    energy_charge_block3: 0        # $/therm
+    energy_block1_cap: 0           # therm
+    energy_block2_cap: 0             # therm
+    units: 'therm'
 
-single_metered_fuel:    # Schedule 23 via Puget Sound Energy utility
+single_metered_fuel:
   schedule_basic:
     monthly_base_charge: 12.5         # $/month
     monthly_energy_charge: 1.29492    # $/therm
+    units: 'therm'
+  schedule_energy_block:
+    monthly_base_charge: 0         # $/month
+    energy_charge_block1: 0        # $/therm
+    energy_charge_block2: 0        # $/therm
+    energy_charge_block3: 0        # $/therm
+    energy_block1_cap: 0           # therm
+    energy_block2_cap: 0             # therm
     units: 'therm'
 
 ### Equipment Specifications, Efficiencies
@@ -77,7 +100,7 @@ chp_turn_down: 3.3
 
 # Efficiencies
 ab_eff: 0.80
-energy_plus_eff: 0.80   # TODO: Update value
+energy_plus_eff: 0.80   # Assumed boiler efficiency in Energy Plus
 grid_efficiency: 0.4   # between 0-1, national average
 
 # TES Storage Initialization
@@ -86,21 +109,6 @@ tes_vol_rate: 500  # liters/hr
 tes_energy_density: 80  # kWh/m^3     # TODO: Calculate volume from size in kWh
 
 # Incremental Equipment Costs (installed cost = labor, material, and installation)
-chp_installed_cost: 3063.61   # $/kW
-tes_rate_cost: 14.00          # $/kW
-tes_size_cost: 9.00           # $/kWh
-
-
-### Sources:
-#
-#  CHP specs:
-#  https://chp.ecatalog.ornl.gov/package/39-PR12-ZC97330
-#
-#  CHP installed cost:
-#  https://understandingchp.com/chp-applications-guide/6-8-rules-of-thumb-for-chp-engineering-and-installation-costs/
-#
-#  TES installed cost:
-#  https://betterbuildingssolutioncenter.energy.gov/sites/default/files/slides/Thermal%20Energy%20Storage%2C%20The%20Lowest%20Cost%20Storage.pdf
-#
-# Grid Efficiency:
-# https://www.eia.gov/todayinenergy/detail.php?id=44436
+chp_installed_cost: 3453.34   # $/kW
+chp_om_cost: 0.03             # $/kWh
+tes_installed_cost: 20.96     # $/kWh
