--- a/lfd_package/input_yaml/fairbanks_ak.yaml
+++ b/lfd_package/input_yaml/fairbanks_ak.yaml
@@ -100,15 +100,14 @@ chp_turn_down: 3.3
 
 # Efficiencies
 ab_eff: 0.80
-energy_plus_eff: 0.80   # Assumed boiler efficiency in Energy Plus
+energy_plus_eff: 0.81   # Assumed boiler efficiency in Energy Plus
 grid_efficiency: 0.4   # between 0-1, national average
 
 # TES Storage Initialization
 tes_init: 0.5   # initial SOC
-tes_energy_density: 80  # kWh/m^3
 
 # Incremental Equipment Costs (installed cost = labor, material, and installation)
 chp_installed_cost: 3453.34   # $/kW
 chp_om_cost: 0.03             # $/kWh
 tes_installed_cost: 20.96     # $/kWh
-tes_om_cost: 0                # $/kWh
+tes_om_cost: 0                # $/kW
