--- a/lfd_package/input_yaml/international-falls_mn.yaml
+++ b/lfd_package/input_yaml/international-falls_mn.yaml
@@ -5,7 +5,7 @@
 
 ### Location-specific inputs for International Falls, MN
 
-demand_filename: 'STD2019_InternationalFalls_MN.csv'   # TODO: Change if needed
+demand_filename: 'STD2019_IntFalls_MN.csv'   # TODO: Change if needed
 city: 'international falls'
 state: 'mn' # Must be two-letter abbreviation
 no_apts: 31
@@ -105,7 +105,6 @@ grid_efficiency: 0.4   # between 0-1, national average
 
 # TES Storage Initialization
 tes_init: 0.5   # initial SOC
-tes_energy_density: 80  # kWh/m^3
 
 # Incremental Equipment Costs (installed cost = labor, material, and installation)
 chp_installed_cost: 3453.34   # $/kW
